force1-app2/main/default/objects/Candidate__c/fields/Accepted_Offer__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Offer__c</fullName>
    <formula>IF(TEXT(Application_Status__c)="Accepted Offer","Yes",IF(TEXT(Application_Status__c)="Rejected Offer","No",NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Offer</label>
    <type>Text</type>
</CustomField>