force1-app2/main/default/objects/Candidate__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Accepted Offer</fullName>
            </value>
            <value>
                <fullName>Rejected Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>