force1-app2/main/default/objects/Candidate__c/fields/Degree_Field__c.field-meta.xml
<CustomField>
    <fullName>Degree_Field__c</fullName>
    <label>Degree Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>