force1-app2/main/default/objects/Candidate__c/fields/Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>Degree_Level__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Ph.D.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>