force1-app2/main/default/objects/Candidate__c/fields/Predicted_Likelihood_to_Accept_Offer__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Likelihood_to_Accept_Offer__c</fullName>
    <label>Predicted Likelihood to Accept Offer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>